--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "bclient": "^0.0.2",
+    "bcoin": "^1.0.0-beta.15",
+    "bitcoinjs-lib": "^3.3.2",
     "scrypt": "^6.0.3"
   }
 }
